<resources>
    <string name="app_name">MapTest</string>
    <string name="title_activity_maps">Map</string>
    <string name="name">Name:</string>
    <string name="enter_marker_name">Enter Marker Name...</string>
    <string name="radius">Radius:</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>
