<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editName"
        android:hint="@string/enter_marker_name"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerCategory" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radius"
            android:id="@+id/textRadius" />

        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/editRadius" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/seekRadius"
            android:max="10000"
            android:progress="1000"/>

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/create"
            android:id="@+id/buttonUpdate"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/delete"
            android:id="@+id/buttonDelete"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="@string/cancel"
            android:id="@+id/buttonCancel"/>

    </GridLayout>

</LinearLayout>